# quant-lttd-ichimoku

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  analyze_timing.py  context.md  hyper_tune.py  ichimoku_quant_v6.pinescript  pyproject.toml  research.md  run.sh  test_architect.py  test_architect_long.py  test_binary_clean.py  test_cleanest.py  test_denoising.py  test_denoising2.py  test_denoising3.py  test_early_exit.py  test_final_noise.py  test_hybrid_final.py  test_noise.py  test_params.py  test_perf.py
.impeccable/: config.json  design.json
research/: analyze_exit_lag.py  analyze_target.py  deep_research.py  generate_chart.py  optimize_momentum_exit.py  quantize_ichimoku.py  statistical_tests.py  verify_noise.py
src/: cli.py
src/ichimoku_quant/: backtest.py  data.py  features.py  server.py  strategy.py  visuals.py
tests/: test_features.py
web/: index.html  package.json  vite.config.js
web/src/: App.jsx  index.css
